CAbmio del modelo
